src/objects/Location.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>