src/objects/Location/fields/GDMFSL_Region__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Region__c</fullName>
    <description>Region field will be used for Sharing Rules, and derived from Shipping Account or Service Location.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>