src/objects/Location/fields/GDMFSL_Site_License__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Site_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify License/Clearance required by the Location</description>
    <inlineHelpText>Identify License/Clearance required by the Location</inlineHelpText>
    <label>Site License</label>
    <referenceTo>GDMFSL_Site_License__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>