src/objects/Location/fields/GDMFSL_Vertical__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Vertical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment Vertical</label>
    <referenceTo>GDMFSL_Vertical__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>