src/objects/Location/recordTypes/CH_Location.recordType-meta.xml
<RecordType>
    <fullName>CH_Location</fullName>
    <active>true</active>
    <label>CH_Location</label>
</RecordType>