src/objects/Location/validationRules/GDMFSL_Integrated_Location_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>GDMFSL_Integrated_Location_Not_Editable</fullName>
    <active>true</active>
    <description>6/4/21 9464 - Data specialist needs edit access to these fields at all times. Sharing settings has this object as read only for all other personas</description>
    <errorConditionFormula>AND((NOT($Profile.Name=&apos;Data Load API Only&apos;)&amp;&amp; NOT($Profile.Name=&apos;System Admin API Only&apos;)),(NOT(CONTAINS($User.Full_Name__c,&apos;Interface User&apos;))&amp;&amp; NOT(CONTAINS($User.Full_Name__c,&apos;HBT API Integration&apos;))),(CONTAINS(CreatedBy.Full_Name__c,&apos;Interface User&apos;) || CONTAINS(CreatedBy.Full_Name__c,&apos;HBT API Integration&apos;)), ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>Cannot update a Record which is created from Integration</errorMessage>
</ValidationRule>