src/objects/Location/validationRules/GDMFSL_Positive_Default_Dead_Man_Switch.validationRule-meta.xml
<ValidationRule>
    <fullName>GDMFSL_Positive_Default_Dead_Man_Switch</fullName>
    <active>true</active>
    <errorConditionFormula>GDMFSL_Default_Dead_Man_Switch_Timer__c &lt; 0</errorConditionFormula>
    <errorDisplayField>GDMFSL_Default_Dead_Man_Switch_Timer__c</errorDisplayField>
    <errorMessage>The Default Dead Man Switch Value cannot be negative.</errorMessage>
</ValidationRule>