src/objects/Location/listViews/Account_Locations.listView-meta.xml
<ListView>
    <fullName>Account_Locations</fullName>
    <columns>Name</columns>
    <columns>GDMFSL_Address__c</columns>
    <columns>GDMFSL_Need_Auth_Caller__c</columns>
    <columns>LocationType</columns>
    <columns>GDMFSL_Working_Hours__c</columns>
    <columns>GDMFSL_Location_Manager__c</columns>
    <columns>GDMFSL_Site_PO_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Account Locations</label>
    <sharedTo>
        <allCustomerPortalUsers/>
    </sharedTo>
</ListView>