src/objects/Location/listViews/All_Locations.listView-meta.xml
<ListView>
    <fullName>All_Locations</fullName>
    <columns>GDMFSL_SAP_Customer_Number__c</columns>
    <columns>Name</columns>
    <columns>GDMFSL_Classified_Address__c</columns>
    <columns>LocationType</columns>
    <columns>GDMFSL_Service_Territory__c</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Locations</label>
</ListView>